@@ -1,5 +1,11 @@
 2017-09-09  Tom Tromey  <tom@tromey.com>
 
+	* mi/mi-cmd-var.c (mi_cmd_var_list_children): Use gdb::optional,
+	ui_out_emit_list, ui_out_emit_tuple.
+	(mi_cmd_var_update): Likewise.
+
+2017-09-09  Tom Tromey  <tom@tromey.com>
+
 	* mi/mi-interp.c (mi_user_selected_context_changed): Use
 	ui_out_redirect_pop.
 	* guile/scm-ports.c (ioscm_with_output_to_port_worker): Use
